--- a/EmpInfo/Views/Home/Index.cshtml
+++ b/EmpInfo/Views/Home/Index.cshtml
@@ -317,15 +317,23 @@
         </div>
     </div>
     if (auts.IndexOf("ModuelTest") >= 0) {
-        <div class="col-xs-6 col-sm-4">
+        @*<div class="col-xs-6 col-sm-4">
             <div class="thumbnail">
                 <a href="@Url.Content("~/Home/EditPublicFundInfo")"><img src="@Url.Content("~/Content/images/public_fund.png")" alt="public_fund"></a>
                 <div class="caption">
                     <h3>公积金信息</h3>
                 </div>
             </div>
-        </div>
+        </div>*@
     }
+    @*<div class="col-xs-6 col-sm-4">
+        <div class="thumbnail">
+            <a href="@Url.Content("~/KW/KWIndex")"><img src="@Url.Content("~/Content/images/kw.png")" alt="knowledgeWare"></a>
+            <div class="caption">
+                <h3>知识库</h3>
+            </div>
+        </div>
+    </div>*@
     }
     
     
