--- a/EmpInfo/Views/KW/KWIndex.cshtml
+++ b/EmpInfo/Views/KW/KWIndex.cshtml
@@ -17,12 +17,18 @@
                 $("#catalog_selected").html($(this).html());
             });
 
+            $("#search_content").keyup(function () {
+                if (event.keyCode == 13) {
+                    $("#check_btn").click();
+                }
+            });
+
             $("#check_btn").on("click", function () {
                 var catalog = $("#catalog_selected").html();
                 var content = $.trim($("#search_content").val());
                 $.post("Search", {
                     catalog: catalog,
-                    content:content
+                    content: content
                 }, function (data) {
                     $('#tb').bootstrapTable('load', data);
                     if (data.length == 0) {
@@ -40,23 +46,19 @@
             mobileResponsive: true,
             pagination: true,
             pageSize: 20,
-            pageList:[10,20,50],
+            pageList: [10, 20, 50],
             search: true,
             columns: [
                 {
                     field: "item_no",
                     title: "流水号",
-                    visible:false
+                    visible: false
                 }, {
                     field: "caption",
                     title: "标题",
                     sortable: true,
-                    formatter: function (value, row, index, field) {                        
-                        var text = value;
-                        if (row.has_attachment) {
-                            text = "<i class='fa fa-fw fa-paperclip'></i> " + value;
-                        }
-                        return text;
+                    formatter: function (value, row, index, field) {
+                        return "<i class='fa fa-fw" + (row.has_attachment ? " fa-paperclip" : "") + "'></i> " + value;
                     }
                 }, {
                     field: "catalog",
@@ -108,20 +110,18 @@
             <div class="text-right" style="margin-bottom:12px;">
                 <a href="MyList"><i class="fa fa-user-circle"></i> 管理员入口 <i class="fa fa-angle-double-right"></i></a>
             </div>
-            
         }
-
         <div class="row" style="margin-bottom:24px;">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                 <div class="input-group">
                     <div class="input-group-btn" id="catalog_group">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span id="catalog_selected">所有</span> <span class="caret"></span></button>
-                        <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a href="#">所有</a></li>
-                            @foreach (var ca in catalogs) {
-                                <li><a href="#">@ca</a></li>
-                            }
-                        </ul>
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span id="catalog_selected">所有</span> <span class="caret"></span></button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">所有</a></li>
+                                @foreach (var ca in catalogs) {
+                                    <li><a href="#">@ca</a></li>
+                                }
+                            </ul>
                     </div>
                     <input type="text" class="form-control" id="search_content" placeholder="可以输入标题或关键字进行搜索" />
                     <span class="input-group-btn">
